<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_WEU" Id="{021a61d2-1915-4932-96e0-5a6731fae916}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
  nC_MaxWorkerPrintPerPm  : UDINT := 2;
  nC_MaxPcPerPm           : UDINT := 10;
  nC_MaxPhPerPm           : UDINT := 40;
  
  fC_MaxMachineSpeed      : LREAL := TO_LREAL(100)/60;   // max module speed (100 m/min) in [m/s]
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>